# core-bob

./: .clang-format  .gitignore  CMakeLists.txt  Config.cpp  Config.h  DataProcessors.cpp  GlobalVar.h  IOProcessor.cpp  LogEvent.cpp  LoggingEventProcessor.cpp  QUBIC_JSON_RPC.md  QubicIndexer.cpp  QubicServer.cpp  README.md  RELEASE_NOTES.md  SpecialBufferStructs.h  Version.h  bob.cpp  bob.h  default_config_bob.json  pop10.cpp  rpc_playground.html  shim.h  structs.h
.github/workflows/: ci-test.yml  docker-nightly.yml  lint-workflows.yml  release.yml
RESTAPI/: ApiHelpers.cpp  ApiHelpers.h  QubicRpcHandler.cpp  QubicRpcMapper.cpp  QubicRpcMapper.h  QubicRpcMethods.cpp  QubicRpcMethods.h  QubicRpcWebSocket.cpp  QubicRpcWebSocket.h  QubicSubscriptionManager.cpp  QubicSubscriptionManager.h  RESTServer.cpp  bobAPI.cpp  openapi.json  querySmartContract.cpp
common/: Asset.h  Entity.h  GlobalVar.cpp  GlobalVar.h  K12AndKeyUtil.h  Profiler.h  RequestMap.h  SpecialBufferStructs.h  common_def.h  defines.h  m256i.h  shim.h  structs.h  utils.h
conf/: keydb.conf  kvrocks.conf  kvrocks.service
connection/: NodeIntroducer.cpp  connection.cpp  connection.h  connectionPool.cpp
database/: db.cpp  db.h  db_redis_iface.h  db_redis_real.h  garbageCleaner.cpp
doc/: ANATOMY_OF_BOB.MD  CONFIG_FILE.MD  EPOCH_TRANSITION.MD  FIND_LOG_ASSET_EASY.MD  KERN_BUF_SIZE.MD  KEYDB_INSTALL.md  LOG_EVENT_STREAM.MD  QUBIC_JSON_RPC.md  REST_API.md
docker/: Dockerfile  README.md  bob.json  cleanup.sh  docker-hub.md  entrypoint.sh  kvrocks.conf  redis.conf  supervisord.conf
docker/examples/: docker-compose.yml
docs/: CONFIG_FILE.MD  DEAL_WITH_TX.MD  DOCKER_ENV.md  FINDLOG.MD  FIND_LOG_ASSET_ADVANCED.MD  INDEXER_INDEXING_DATA.MD  KVROCKS_INSTALL.MD  LOGGING_IN_QUBIC.MD  QUBIC_JSON_RPC.md  REST_API.md
logEventCore/: LogEvent.cpp  LogEvent.h  LoggingEventProcessor.cpp  LoggingEventProcessorCore.cpp  LoggingEventProcessorCore.h
processors/: DataProcessors.cpp  IOProcessor.cpp  QubicIndexerProcessor.cpp
scripts/: delete_log_id.lua  delete_log_ranges.lua  delete_tickdata_tickvote.lua  kvrocks-diag.sh  set_tracker.lua  test_rpc.sh  useful_script.sh
spdlogDriver/: Logger.cpp  Logger.h
src/: bob.cpp  bob.h  config.cpp  config.h  global_var.cpp  global_var.h  main.cpp  pop10.cpp  shim.h  special_buffer_structs.h  version.h
src/connection/: connection.cpp  connection.h  connection_pool.cpp  node_introducer.cpp  request_map.h
src/core/: asset.h  common_def.h  defines.h  entity.h  k12_and_key_util.h  m256i.h  structs.h
src/core/log_event/: log_event.cpp  log_event.h
src/database/: db.cpp  db.h  garbage_cleaner.cpp
src/fs/: file_io.cpp  file_io.h
src/logger/: logger.cpp
src/p2p/: p2p_server.cpp
src/processors/emulator/: emulator.cpp
src/processors/indexer/: indexer.cpp
src/processors/io/: io_processor.cpp
src/processors/logging/: log_event.cpp  logging_event.cpp
src/processors/ticking/: ticking.cpp
src/profiler/: profiler.h
src/rest_api/: ApiHelpers.cpp  ApiHelpers.h  LogSubscriptionManager.cpp  LogSubscriptionManager.h  LogWebSocket.cpp  LogWebSocket.h  QubicRpcHandler.cpp  QubicRpcHandler.h  QubicRpcMapper.cpp  QubicRpcMapper.h  QubicRpcMethods.cpp  QubicRpcMethods.h  QubicRpcWebSocket.cpp  QubicRpcWebSocket.h  QubicSubscriptionManager.cpp  QubicSubscriptionManager.h  RESTServer.cpp  bobAPI.cpp  openapi.json  querySmartContract.cpp
src/utils/: utils.h
tests/: test_db.cpp  test_log_processor.cpp  test_round_buffer.cpp  test_xkcp.cpp
tools/: README_bob_probe.md  bob_probe.cpp  build_probe.sh
web/: rpc_playground.html
